2004-09-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/crc16.h: Update copyright year.
	(_crc16_update): Add __volatile__ to inline asm. [Bug #10450]
	(_crc_xmodem_update): Ditto.
	(_crc_ccitt_update): Ditto.
	* NEWS: Add note about bug #10450.

2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: enable and document atof().

2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: Fix a logical flaw that caused
	characters > 'Z' && < 'a' to be misdetected as valid
	hex digits.  Fix for bug #10420.

2004-09-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/stdint.h (__HAS_INT32_T__): Define if gcc can supply us with
	a 32 bit integer.
	(__HAS_INT64_T__): Define if gcc can supply us with a 64 bit integer.
	* include/avr/pgmspace.h (prog_int32_t): Use __HAS_INT32_T__ when
	typedef'ing.
	(prog_uint32_t): Ditto.
	(prog_int64_t): Use __HAS_INT64_T__ when typedef'ing.
	(prog_uint64_t): Ditto.

2004-09-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in: Don't generate version.h.
	* reconf: Don't run autoheader.

2004-09-10  Theodore A. Roth  <troth@openavr.org>
[Contributed by Rene Liebscher <R.Liebscher@gmx.de>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/pgmspace.h (PSTR): Fix to allow PSTR to work with C++.
	Fix for bug #8633.
	* NEWS: Add note about PSTR fix.

2004-09-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about bug #10078.
	* include/string.h (strsep): Remove __ATTR_PURE__, bug #10078.
	(strtok_r): Remove __ATTR_PURE__ too.
	(strncmp): Add __ATTR_PURE__.

2004-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: Make it work on 1 MHz clock.
	* doc/examples/twitest/twitest.dox: Renumber annotations.
