@@ -16,6 +16,8 @@
           only incidentally for compile-time constant indexes since the
           compiler would then insert the appropriate ROM address.
   [#9704] suggested putc() behavior breaks binary transfer (doc fix)
+  [#10068] vfscanf fails to properly process multiple floating point
+           numbers.
   [#10078] strsep() should not be pure
   [#10420] sscanf(), If there is a decimal number followed by the
            character '_' in the buffer, you can't get the the number.
